--- a/ohmyfood.css
+++ b/ohmyfood.css
@@ -5,6 +5,10 @@ body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
 }
+#logo{
+    width: 350px;
+    margin-top: 15px;
+}
 
 header {
     font-family: 'Shrikhand', cursive;
@@ -22,7 +26,7 @@ main .ville {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: lightgray;
+    background-color: #f3f3f3;
     font-weight: bold;
     gap: 10px;
 
@@ -34,7 +38,8 @@ main .ville i {
 
 .explorer {
     text-align: center;
-    background-color: #f2f2f2;
+    background-color: #fafafa;
+    margin-top: -37px;
 }
 
 .explorer button {
@@ -45,7 +50,7 @@ main .ville i {
     width: 300px;
     font-size: 24px;
     padding: 11px;
-
+    margin-bottom: 40px;
 
 }
 
@@ -54,23 +59,23 @@ main .ville i {
 }
 
 .explorer h2 {
-    margin-top: 40px;
-    font-size: 60px;
+    
+    font-size: 45px;
 }
 
 .explorer p {
-    font-size: 30px;
+    font-size: 23px;
 }
 
 .listefiltres h2 {
-    padding-left: 90px;
+    padding-left: 110px;
     font-size: 40px;
 }
 
 .filtres {
     display: flex;
     justify-content: space-around;
-    padding-top: 60px;
+    padding-top: 10px;
     flex-wrap: wrap;
 
 
@@ -81,7 +86,9 @@ main .ville i {
     border-radius: 15px;
     padding: 10px;
     background-color: #f6f6f6;
-    box-shadow: 1px 1px 10px -3px;
+    box-shadow: 1px 1px 2px lightgrey;
+    width: 250px;
+     
 }
 
 .nombres {
@@ -91,27 +98,295 @@ main .ville i {
     margin-left: -25px;
     margin-right: 10px;
     padding: 8px;
+    height: 10px;
+    width: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
 }
 
 
 
 .fa-solid.fa-mobile-screen-button {
     color: darkgray;
-    padding-top: 23px;
+    padding-top: 20px;
     padding-right: 5px;
     font-size: 20px;
 }
 
 .fa-solid.fa-list {
     color: darkgray;
-    padding-top: 23px;
+    padding-top: 20px;
     padding-right: 5px;
     font-size: 20px;
 }
 
 .fa-solid.fa-store {
     color: darkgray;
-    padding-top: 23px;
+    padding-top: 20px;
     padding-right: 5px;
     font-size: 20px;
+}
+.ranger {
+    
+    background-color: #f6f6f6;
+    justify-content: flex-start;
+
+}
+.restaurants{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 20px;
+    
+}
+.ranger h2{
+    margin-left: 50px;
+    margin-top: 50px;
+    padding-top: 30px;
+}
+.restaurant-images h3,p{
+    margin-left: 10px;
+    box-shadow: 0px 0px 0px 0px;
+    gap: 100px;
+
+}
+
+.restaurants img {
+    width: 100%;
+    object-fit: cover;
+    border-radius: 20px 20px 0px 0px;
+    height: 250px;
+    
+}
+.restaurant-images{
+    box-shadow: 5px 4px 10px lightgray;
+}
+.restaurants div{
+    
+    border-radius: 20px;
+    margin-bottom: 40px;
+    width: 45%;
+    
+}
+.new { 
+    
+    position: absolute;
+    background-color: #99e2d0 ;
+    color: #1a8a68;
+    border-radius: 5px;
+    right: 100px;
+    padding: 10px;
+    margin-top: 25px; 
+     
+}
+.fa-regular.fa-heart{
+    
+    position: absolute;
+    right: 100px;
+    margin-top: -70px;
+    font-size: 30px;
+   
+
+     
+}
+.fa-regular.fa-heart:hover{
+    
+    transform: scale(1.05);
+    cursor: pointer;
+}
+
+
+.footer{
+    background-color: #353535;
+    color: white;
+    padding: 20px;
+}
+.footerh5{
+    font-family: 'shrikhand', cursive;
+    font-size: 25px;
+    margin-top: 0px;
+    margin-left: 20px;
+}
+.footerp{
+    padding: 0;
+    margin: 20px;
+}
+
+@media screen and (max-width: 768px){
+    body {
+        margin: 0;
+        font-family: 'Roboto', sans-serif;
+    }
+    
+    header {
+        font-family: 'Shrikhand', cursive;
+        text-align: center;
+        box-shadow: 0px 3px 8px darkgrey;
+        padding-top: 1px;
+        padding-bottom: 1px;
+        position: relative;
+        font-size: 20px;
+    
+    
+    }
+    #logo{
+        width: 50%;
+    }
+    main .ville {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color:#f3f3f3;
+        gap: 10px;
+    
+    }
+    
+    main .ville i {
+        font-size: 22px;
+    }
+    
+    .explorer {
+        background-color: #fafafa;
+        margin-top: 0;
+    }
+    
+    .explorer button {
+        border-radius: 30px;
+        border-color: white;
+        color: white;
+        background-image: linear-gradient(to top, #9356DC, #FF79DA);
+        font-size: 20px; 
+        margin-bottom: 40px;
+    
+    
+    }
+    
+    .explorer button:hover {
+        transform: scale(1.1);
+    }
+    
+    .explorer h2 {
+        margin-top: 0px;
+        text-align: center;
+        font-size: 25px;
+        padding-top: 40px;
+    }
+    
+    .explorer p {
+        font-size: 18px;
+    }
+    
+    .listefiltres h2 {
+        margin-left: -80px;
+        font-size: 30px;
+        
+    }
+    
+    .filtres {
+        display: flex;
+        justify-content: space-around;
+        padding-top: 10px;
+        flex-wrap: wrap;
+    
+    }
+    
+    .filtres div {
+        display: flex;
+        border-radius: 15px;
+        background-color: #f6f6f6;
+        box-shadow: 1px 1px 10px lightgray;
+        margin-bottom: 20px;
+        width: 300px;
+        
+    }
+    .filtres div:hover{
+        color: #9356DC;
+        
+    }
+    .filtres h3{
+        padding-left:  20px;
+    }
+    
+    .nombres {
+        border-radius: 50%;
+        background-color: #9356dc;
+        color: white;
+        margin-left: -25px;
+        margin-right: 10px;
+        padding: 8px;
+        margin-top: 17px;
+    }
+    
+    
+    
+    .fa-solid.fa-mobile-screen-button {
+        color: darkgray;
+        
+        font-size: 20px;
+        
+    }
+    
+    .fa-solid.fa-list {
+        color: darkgray;
+        font-size: 20px;
+    }
+    
+    .fa-solid.fa-store {
+        color: darkgray;
+       
+        font-size: 20px;
+    }
+    .fa-solid.fa-store:hover{
+        color: #9356DC;
+    }
+   .ranger h2{
+    margin-left: 25px;
+   } 
+.restaurants div{
+    width: 100%;
+    height: 290px;
+    background-color: white;
+   
+    
+}
+
+.restaurants img{
+    height: 200px ;
+    
+}
+.restaurant-images h3,p{
+   
+    margin: 10px;
+
+}
+.new { 
+    
+    position: absolute;
+    background-color: #99e2d0 ;
+    color: #1a8a68;
+    border-radius: 5px;
+    right: 50px;
+    padding: 10px;
+    margin-top: 25px; 
+     
+}
+.fa-regular.fa-heart{
+    
+    
+    right: 68px;
+    margin-top: -50px;
+    font-size: 30px;
+    
+}
+.fa-regular.fa-heart:hover{
+   
+    transform: scale(1.05);
+    cursor: pointer;
+}
+.footerp{
+    margin: 7px;
+}
+    
 }
