--- a/menu.css
+++ b/menu.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&family=Shrikhand&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
 
-.fa-solid.fa-arrow-left{
-    
+.fa-solid.fa-arrow-left {
+
     font-size: 20px;
     align-items: center;
     position: absolute;
@@ -10,7 +10,8 @@
     margin-left: 40px;
     color: #000000;
 }
-#logos{
+
+#logos {
     width: 350px;
     margin-top: 10px;
     display: flex;
@@ -19,50 +20,61 @@
     margin-left: 750px;
     padding: 20px;
 }
-body{
+
+body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
 }
-.images img{
+
+.images img {
     width: 100%;
     object-fit: cover;
-    height:300px;
+    height: 300px;
 }
-.nomrestaurant{
+
+.nomrestaurant {
     background-color: #f6f6f6;
     border-radius: 50px 50px 0px 0px;
     margin-top: -70px;
     position: relative;
+   
     
     
-    
-    
+
+
+
+
 }
-.nomrestaurant h1{
-    font-family: Shrikhand,"cursive";
+
+.nomrestaurant h1 {
+    font-family: Shrikhand, "cursive";
     margin-left: 100px;
-    font-size: 30px; 
-    display: flex; 
+    font-size: 30px;
+    display: flex;
     justify-content: space-between;
     padding-top: 20px;
-    
+
 }
-.nomrestaurant i{
-    
+
+.nomrestaurant i {
+
     margin-right: 100px;
-    
+
 }
-.nomrestaurant h4{
+
+.nomrestaurant h4 {
     font-size: 20px;
     margin-left: 100px;
     font-weight: 400;
     text-transform: uppercase;
-    border-bottom: 5px solid #99e2d0;;
+    border-bottom: 5px solid #99e2d0;
+    ;
     width: 55px;
     padding-bottom: 10px;
-    
+
 }
-.menu{
+
+.menu {
     display: flex;
     justify-content: space-between;
     background-color: white;
@@ -72,101 +84,177 @@ body{
     padding: 5px;
     align-items: center;
     height: 75px;
+    cursor: pointer; 
+    overflow: hidden;
+   
+    white-space: nowrap; 
+    text-overflow: ellipsis;
+     
+    
+
 }
-.menuplat h3,p{
+
+.menu:hover .menu_check{
+    margin-right:-6px; 
     
-    margin-left: 20px;
+  
+}
+.menu:hover .menu_check .fa-circle-check{
+    transform: rotate(0deg);
+    
+
+}
+
+.menu_check {
+    background: #99e2d0;
+    cursor: pointer;
+    padding: 50px;
+    margin: -6px;
+    margin-right: -90px;
+    border-radius: 0 15px 15px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: margin-right 0.8s;
+    
     
 }
-.menuplat h3{
+   
     
+.fa-circle-check{
+    transform: rotate(360deg);
+    transition: transform 700ms;
+}
+
+.menu_check .fa-solid.fa-circle-check {
+
+    font-size: 25px;
+    color: white;
+    margin-right: 0px
+}
+
+.menuplat{
+    width: 310px;
+    
+}
+.menuplat h3,
+p {
+
+    margin-left: 10px;
+    
+
+
+}
+
+.menuplat h3 {
+
     margin-bottom: -12px;
-}
-.prix{
-        font-size: 20px;
-        font-weight: bold;
-       margin-top: 30px;
-       margin-right: 20px;
-}
-button{
-        border-radius: 30px;
-        border-color: white;
-        color: white;
-        background-image: linear-gradient(to top, #9356DC, #FF79DA);
-        font-size: 20px; 
-        padding: 15px;
-        margin-left: 120px;
-        margin-top: 30px;
-        box-shadow: 4px 4px 10px rgb(0 0 0 / 25%);
     
 }
 
-.footer{
+.prix {
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 30px;
+    margin-right:20px;
+   
+}
+
+button {
+    border-radius: 30px;
+    border-color: white;
+    color: white;
+    background-image: linear-gradient(to top, #9356DC, #FF79DA);
+    font-size: 20px;
+    padding: 15px;
+    margin-left: 120px;
+    margin-top: 30px;
+    box-shadow: 4px 4px 10px rgb(0 0 0 / 25%);
+    border: 0;
+
+}
+
+.footer {
     background-color: #353535;
     color: white;
     padding: 10px;
     margin-top: 50px;
 }
-.footerh5{
+
+.footerh5 {
     font-family: 'shrikhand', cursive;
     font-size: 25px;
     margin-top: 0px;
     margin-left: 20px;
 }
-.footerp{
+
+.footerp {
     padding: 0;
     margin: 20px;
 }
-@media screen and (max-width: 768px){
-    #logos{
-    margin-left: 80px;
-    width: 200px;
-    padding: 20px;
-    margin-top: 0px;
-   
+
+@media screen and (max-width: 768px) {
+    #logos {
+        margin-left: 80px;
+        width: 200px;
+        padding: 20px;
+        margin-top: 0px;
+
     }
-    .nomrestaurant h1{
-      
+
+    .nomrestaurant h1 {
+
         font-size: 25px;
         margin-left: 25px;
-       
+
     }
-    .nomrestaurant i{
-       
+
+    .nomrestaurant i {
+
         margin-right: 50px;
         display: flex;
         justify-content: center;
         align-items: center;
-        
+
     }
-    .nomrestaurant h4{
+
+    .nomrestaurant h4 {
         font-size: 20px;
         margin-left: 25px;
     }
-    .footer{
+
+    .menu_check {
+        padding: 30px;
+    }
+
+    .footer {
         background-color: #353535;
         color: white;
         padding: 10px;
         margin-top: 50px;
-        
+
     }
-    .footerh5{
+
+    .footerh5 {
         font-family: 'shrikhand', cursive;
         font-size: 25px;
         margin-top: 0px;
         margin-left: 20px;
     }
-    .footerp{
-        
+
+    .footerp {
+
         margin: 20px;
         display: flex;
         gap: -15px;
     }
-      .footer i{
-        
+
+    .footer i {
+
         margin-right: 10px;
-      }  
-    button{
+    }
+
+    button {
         width: 220px;
         margin-left: 95px;
     }
