--- a/ohmyfood.css
+++ b/ohmyfood.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&family=Shrikhand&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
 
+
+
 *{
     text-decoration: none;
     color: black;
@@ -13,7 +15,59 @@ a:hover{
 body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
+    position: relative;
+    
 }
+.loaderpage{
+    position: absolute;
+    background: #f1f1f1;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: opacity 2s ease-in-out;
+    z-index: 9999;
+    opacity: 1;
+    animation: load 0.2s 3s forwards;
+   
+}
+
+  
+.dot{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background: #000;
+    margin: 0 15px;
+    animation: loader infinite 0.3s alternate;   
+    
+}
+.d2{
+    animation-delay: 0.05s;
+}
+.d3{
+    animation-delay: 0.1s;
+}
+@keyframes load{
+0% {
+    opacity: 1;
+     
+}
+100% {
+    opacity: 0;
+   z-index: -20;
+    
+}
+}
+
+@keyframes loader {
+    100%{
+        transform: translateY(-30px);
+        
+    }
+}
+
 #logo{
     width: 350px;
     margin-top: 15px;
@@ -58,14 +112,20 @@ main .ville i {
     color: white;
     background-image: linear-gradient(to top, #9356DC, #FF79DA);
     width: 300px;
+    height: 50px;
     font-size: 24px;
     padding: 11px;
     margin-bottom: 40px;
+    border: 0;
+    box-shadow: 4px 4px 10px rgb(0 0 0 / 25%);
 
 }
 
 .explorer button:hover {
-    transform: scale(1.1);
+    transform: scale(1.03);
+    opacity: 0.8;
+    box-shadow: 2px 2px 7px black;
+
 }
 
 .explorer h2 {
@@ -79,7 +139,7 @@ main .ville i {
 }
 
 .listefiltres h2 {
-    padding-left: 110px;
+    padding-left: 70px;
     font-size: 40px;
 }
 
@@ -101,7 +161,9 @@ main .ville i {
     width: 250px;
      
 }
-
+.filtres div:hover{
+    background-color: #BBACC0;
+}
 .nombres {
     border-radius: 50%;
     background-color: #9356dc;
@@ -134,7 +196,7 @@ main .ville i {
 }
 
 .fa-solid.fa-store {
-    color: #9356;
+    color: #9356DC;
     padding-top: 20px;
     padding-right: 5px;
     font-size: 20px;
@@ -153,9 +215,10 @@ main .ville i {
     
 }
 .ranger h2{
-    margin-left: 50px;
+    margin-left: 70px;
     margin-top: 50px;
     padding-top: 30px;
+    font-size: 40px;
 }
 .restaurant-images h3,p{
     margin-left: 10px;
@@ -198,6 +261,7 @@ main .ville i {
     right: 100px;
     margin-top: -70px;
     font-size: 30px;
+    
    
 
      
@@ -207,8 +271,9 @@ main .ville i {
     background:linear-gradient( #9356DC, #FF79DA); 
     -webkit-text-fill-color: transparent;
    -webkit-background-clip: text;
+  
 
-    
+   
 }
 
 
@@ -221,7 +286,7 @@ main .ville i {
 
 .footer{
     background-color: #353535;
-    color: white;
+    
     padding: 20px;
 }
 .footerh5{
@@ -233,6 +298,11 @@ main .ville i {
 .footerp{
     padding: 0;
     margin: 20px;
+    
+    
+}
+.footerp,.footerh5,.fa-solid.fa-utensils,.fa-solid.fa-handshake-angle{
+    color: white;
 }
 
 @media screen and (max-width: 768px){
@@ -302,7 +372,7 @@ main .ville i {
     }
     
     .listefiltres h2 {
-        margin-left: -80px;
+        margin-left: -35px;
         font-size: 30px;
         
     }
@@ -366,6 +436,7 @@ main .ville i {
     }
    .ranger h2{
     margin-left: 25px;
+    font-size: 30px;
    } 
 .restaurants div{
     width: 100%;
@@ -404,10 +475,11 @@ main .ville i {
     
     
 }
-.fas.fa-heart{
+.fas .fa-heart{
     
-    background-color:linear-gradient(to top, #9356DC, #FF79DA); 
+    background:linear-gradient(to top, #9356DC, #FF79DA); 
     background-clip: text;
+    transition-duration: .55s;
     
 }
 .fas.fa-heart:hover{
